--- a/BowlingCoreMVC/wwwroot/css/site.css
+++ b/BowlingCoreMVC/wwwroot/css/site.css
@@ -84,6 +84,34 @@ input[type='checkbox'].pins-checkbox + label:after {
     -moz-osx-font-smoothing: grayscale;
 }
 
+input[type='checkbox'].pins-checkbox-mini + label:before,
+input[type='checkbox'].pins-checkbox-mini + label:after {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-size: 1.5em;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+#PinsTable-mini td {
+    text-align: center;
+    vertical-align: middle;
+    width: 20px;
+    height: 40px;
+    min-height: 40px;
+}
+
+#PinsTable-mini {
+    table-layout: fixed;
+    width: 100%;
+    max-width: 100px;
+    min-width: 100px;
+}
 /* Unchecked icon
 input[type='checkbox'].pins-checkbox + label:before {
     //content: "\e157";
